# Thesis

./: .commitmsg  .gitignore  .pre-commit-config.yaml  ARCHIVE.md  CLAUDE.md  COLLOCATION_BEST_RESULTS.md  CONSISTENCY_CAMPAIGN_PLAN.md  DECISIONS.md  EXPERIMENT_REPORT.md  JOURNAL.md  METHODOLOGY.md  NATURAL_GRADIENT_COLLOCATION.md  SESSION_LOG.md  pyproject.toml  test_discover.py  test_energy.py  test_load.py
.agentic/: EXECUTION_KERNEL.md
.github/: copilot-instructions.md
Thesis/: abstract.tex  acknowledgement.tex  appendix.tex  conclusion.tex  discussion.tex  introduction.tex  main.tex  method.tex  references.bib  results.tex  test.aux  test.out  test.tex  test.toc  theory.tex
plans/: 2026-03-30_consistency-campaign-remaining-phases.md  2026-04-05_optimizer-tournament.md  2026-04-06_higher-N-scaling.md  2026-04-08_sampling-improvement-study.md  2026-04-10_stabilization-generalization.md  2026-04-11_gradient-quality-improvements.md
results/: 2026-04-08_best-final-eval-report.md
scripts/: adam_lowomega_refine.py  analyze_coalescence_gradients.py  analyze_node_quality.py  arch_natgrad_sweep.py  auto_overnight_matrix.py  campaign_v11_sampling_fix_validation.sh  campaign_v12_reinforce_only_tmux.sh  campaign_v12b_reinforce_only_tmux.sh  campaign_v13_lowomega_reinforce_only_tmux.sh  campaign_v14_lowomega_2stage_reinforce_only_tmux.sh  campaign_v15_n6_lowomega_2stage_reinforce_only_tmux.sh  campaign_v16_full_lowomega_tmux.sh  campaign_v17_n12_8h_tmux.sh  campaign_v3_targeted.py  campaign_v4_expand.py  campaign_v4_n2_precision.sh  campaign_v5_10h_fix.py  campaign_v6_n20bf_n2_fewhours.py  campaign_v7_n2_exact_n12_continue.py  campaign_v8_n2_tight_n12_n20.py  campaign_v9_long24h.py  cascade_low_omega.py  cgsr_campaign.py  coalescence_gate_campaign.py  cross_regime_analysis.py  diag_adaptive_sigma_update.py  diag_lowomega_simple.py  diagnostic_lowomega_layer1.py  eval_checkpoint_matrix.py  eval_consistency_phase4_matched.sh  eval_consistency_phase5.sh  instrumented_run.py  launch_consistency_phase1.sh  launch_consistency_phase2.sh  launch_consistency_phase2d.sh  launch_consistency_phase3.sh  launch_consistency_phase3_v2.sh  (+52 more)
src/: Backflow.py  (+73 more)
(+811 files in other folders)
