[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Im2ql4u", email = "122972303+Im2ql4u@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[project.scripts]
thesis = "thesis:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipywidgets>=8.1.7",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
